# BahnVision

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  DOCUMENTATION_VERIFICATION_REPORT.md  GEMINI.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  TODO.md  codecov.yml  design-doc.md  docker-compose.demo.yml  docker-compose.observability.yml  docker-compose.yml  package-lock.json  test_simplified_client.py
backend/: Dockerfile  README.md  SIMPLIFICATION_ASSESSMENT.md  SIMPLIFICATION_COMPLETION_REPORT.md  SIMPLIFICATION_ROADMAP.md  alembic.ini  mypy.ini  pyproject.toml  requirements.runtime.txt  requirements.txt  test_cache_compatibility.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0d6132be0bb0_initial_schema.py  80a6a8257627_rename_mvg_to_transit.py  add_daily_station_stats.py  add_gtfs_rt_observations.py  add_gtfs_tables.py  fix_heatmap_duplication.py  redesign_gtfs_rt_storage.py
backend/app/: main.py
backend/app/api/: metrics.py  routes.py
backend/app/core/: config.py  config_simplified.py  database.py  metrics.py  telemetry.py
backend/app/jobs/: cache_warmup.py  gtfs_scheduler.py  heatmap_cache_warmup.py  rt_processor.py  stations_sync.py
backend/app/models/: gtfs.py  heatmap.py  ingestion.py  mvg.py  station_stats.py  transit.py
backend/app/persistence/: __init__.py  dependencies.py  models.py  repositories.py
backend/app/services/: CACHE_SIMPLIFICATION.md  cache.py  gtfs_feed.py  (+19 more)
backend/docs/: README.md  prd.md  schema-review.md  tasks.json  tech-spec.md
backend/scripts/: backfill_daily_stats.py  import_gtfs.py  load_test_fixtures.py  reset_database.py  test_migration_with_data.sh  test_migrations.sh
backend/tests/: conftest.py  service_availability.py  test_mvg_endpoints.py
(+386 files in other folders)
